<resources>

    <string name="app_name">Master</string>
    <string name="action_settings">Settings</string>
    <string name="Student_ID">Enter student ID</string>
    <string name="key_Submit">Submit</string>
    <string name="Button_Login">Login</string>
    <string name="Button_register">Register</string>
    <string name="Password">Enter Password</string>
    <string name="logout_action">Exit</string>
    <string name="button_cal">Cal</string>
    <string name="button_course">Courses</string>

    <string name="log_out_option">Log out</string>
    <string name="to_Calender_view">My Calendar</string>
    <string name="to_course_view">View Courses</string>
    <string name="to_add_crn">Add Courses</string>
    <string name="to_view_info">View Information</string>
    <string name="to_view_remove_registration">My Courses</string>

    <string name="title_activity_course_filter">CourseFilterActivity</string>
    <string name="title_back">Back</string>
    <string name="title_list">Selection</string>
    <string name="title_filter">Filter</string>
    <string name="title_crn">Add CRN</string>
    <string name="title_add">Add</string>
    <string name="title_reset">Reset</string>
    <string name="title_done">Done</string>
    <string name="title_activity_display_registration">DisplayRegistrationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_deregister">Deregister</string>
    <string name="register_classes">Register Classes</string>
    <string name="register_crn_msg">Do you want register for all selected classes identified by their CRNs?</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>

</resources>
