<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp"
>


        <TextView

            android:id="@+id/title"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_margin="4dp"
            android:text="@string/register_classes"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/line1"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_alignStart="@+id/title"
            android:layout_below="@+id/title"
            android:layout_marginTop="-4dp"
            android:text="@string/register_crn_msg"
            android:textColor="@color/darkText" />

        <Button
            android:id="@+id/popUpMsgButtonCancel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/title"
            android:layout_below="@+id/line1"
            android:text="@string/cancel" />


        <Button
            android:id="@+id/popUpMsgButtonOK"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/title"
            android:layout_below="@+id/line1"
            android:text="@string/ok" />

</RelativeLayout>